@@ -25,7 +25,7 @@ class CapabilityMatcherTest {
 					"NO00000-quad-tree-testing",
 					"NO",
 					"DENM:2.3.2",
-					List.of("1022133","1022330","102320","12003020","120030010","120012100","120030012","1023213000","1022303","12001030","12001032","1200201","12002310","12001023","12001220","12001022","12003002","12001222","120030222","120030220","12003000","12002031","12002033","12001021","12001020","1200212","1200213","1200210","1200211","1200013","12002303","120003","12002302","12001012","12002301","12002300","102322011","1023211","1023212","1023210","102231","102232","12001010","1200100","1200023","12001202","10223310","12002211","12001201","12001200","102303","102302"),
+					List.of("1022133", "1022330", "102320", "12003020", "120030010", "120012100", "120030012", "1023213000", "1022303", "12001030", "12001032", "1200201", "12002310", "12001023", "12001220", "12001022", "12003002", "12001222", "120030222", "120030220", "12003000", "12002031", "12002033", "12001021", "12001020", "1200212", "1200213", "1200210", "1200211", "1200013", "12002303", "120003", "12002302", "12001012", "12002301", "12002300", "102322011", "1023211", "1023212", "1023210", "102231", "102232", "12001010", "1200100", "1200023", "12001202", "10223310", "12002211", "12001201", "12001200", "102303", "102302"),
 					List.of(6)
 			),
 			new Metadata(RedirectStatus.OPTIONAL)
@@ -41,7 +41,7 @@ class CapabilityMatcherTest {
 		capability.setMetadata(meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(capability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2'", "")), "");
 		assertThat(commonInterest).isEmpty();
 	}
 
@@ -54,7 +54,7 @@ class CapabilityMatcherTest {
 		datexCapability.setMetadata(meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2'", "")), "");
 		assertThat(commonInterest).isNotEmpty();
 	}
 
@@ -67,7 +67,7 @@ class CapabilityMatcherTest {
 		datexCapability.setMetadata(meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2' and quadTree like '%,12234%'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2' and quadTree like '%,12234%'", "")), "");
 		assertThat(commonInterest).isEmpty();
 	}
 
@@ -80,7 +80,7 @@ class CapabilityMatcherTest {
 		datexCapability.setMetadata(meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2' and quadTree like '%,012233%'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2' and quadTree like '%,012233%'", "")), "");
 		assertThat(commonInterest).isNotEmpty();
 	}
 
@@ -93,7 +93,7 @@ class CapabilityMatcherTest {
 		datexCapability.setMetadata(meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2' and quadTree like '%,012100%'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2' and quadTree like '%,012100%'", "")), "");
 		assertThat(commonInterest).isNotEmpty();
 	}
 
@@ -106,7 +106,7 @@ class CapabilityMatcherTest {
 		datexCapability.setMetadata(meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2' and quadTree like '%,012100%' and publicationType = 'MeasuredDataPublication'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2' and quadTree like '%,012100%' and publicationType = 'MeasuredDataPublication'", "")), "");
 		assertThat(commonInterest).isNotEmpty();
 	}
 
@@ -119,20 +119,20 @@ class CapabilityMatcherTest {
 		datexCapability.setMetadata(meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2' and quadTree like '%,012100%' and publicationType = 'Obstruction'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2' and quadTree like '%,012100%' and publicationType = 'Obstruction'", "")), "");
 		assertThat(commonInterest).isEmpty();
 	}
 
 	@Test
 	void datexCapabilitiesMatchDatexSelectorOutsideQuadTreeLongerInFilter() {
-		DatexApplication datexApplication = new DatexApplication("publ-id-1", "pub-123", "NO", "1.0", QUAD_TREE_0121_0122,"Obstruction", "publisherName");
+		DatexApplication datexApplication = new DatexApplication("publ-id-1", "pub-123", "NO", "1.0", QUAD_TREE_0121_0122, "Obstruction", "publisherName");
 		NeighbourCapability datexCapability = new NeighbourCapability();
 		datexCapability.setApplication(datexApplication);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
 		datexCapability.setMetadata(meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2' and quadTree like '%,121000%'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2' and quadTree like '%,121000%'", "")), "");
 		assertThat(commonInterest).isEmpty();
 	}
 
@@ -145,7 +145,7 @@ class CapabilityMatcherTest {
 		datexCapability.setMetadata(meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED," \n\t\n\n messageType = 'DATEX2' and \tquadTree \r\n\t\n\n like \t\t '%,01210%'\r\n", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, " \n\t\n\n messageType = 'DATEX2' and \tquadTree \r\n\t\n\n like \t\t '%,01210%'\r\n", "")), "");
 		assertThat(commonInterest).isNotEmpty();
 	}
 
@@ -155,10 +155,10 @@ class CapabilityMatcherTest {
 		quadTreeTiles.add("12004");
 		DenmApplication application = new DenmApplication("NO-123",
 				"pub-123",
-				 "NO",
-				  "DENM:1.2.2",
-				   quadTreeTiles,
-				    List.of(6));
+				"NO",
+				"DENM:1.2.2",
+				quadTreeTiles,
+				List.of(6));
 
 		NeighbourCapability capability = new NeighbourCapability();
 		capability.setApplication(application);
@@ -181,22 +181,22 @@ class CapabilityMatcherTest {
 
 	@Test
 	public void denmNonMatching() {
-        Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
+		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Collections.singleton(new NeighbourCapability(
-                        new DenmApplication("NO-123",
-                                "pub-123",
-                                "NO",
-                                "DENM:1.2.2",
-                                List.of("12004"),
-                                List.of(5)),
-                        new Metadata(RedirectStatus.OPTIONAL)
-                )),
+						new DenmApplication("NO-123",
+								"pub-123",
+								"NO",
+								"DENM:1.2.2",
+								List.of("12004"),
+								List.of(5)),
+						new Metadata(RedirectStatus.OPTIONAL)
+				)),
 				Collections.singleton(new LocalSubscription(
-                        52,
-                        LocalSubscriptionStatus.CREATED,
-                        "(publisherId = 'NO-123') AND (quadTree like '%,12004%') AND (messageType = 'DENM') AND (causeCode = 6) AND (protocolVersion = 'DENM:1.2.2') AND (originatingCountry = 'NO')",
-                        ""
-                )),
+						52,
+						LocalSubscriptionStatus.CREATED,
+						"(publisherId = 'NO-123') AND (quadTree like '%,12004%') AND (messageType = 'DENM') AND (causeCode = 6) AND (protocolVersion = 'DENM:1.2.2') AND (originatingCountry = 'NO')",
+						""
+				)),
 				""
 		);
 		assertThat(commonInterest).isEmpty();
@@ -205,23 +205,23 @@ class CapabilityMatcherTest {
 	@Test
 	public void denmMatchesOneOfSeveral() {
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
-                Set.of(new NeighbourCapability(
-                                new DenmApplication("NO-123",
-                                        "pub-123",
-                                        "NO",
-                                        "DENM:1.2.2",
-                                        List.of("12004"),
-                                        List.of(5, 6)),
-                                        new Metadata(RedirectStatus.OPTIONAL)
-                                )),
-                        Collections.singleton(new LocalSubscription(
-                                52,
-                                LocalSubscriptionStatus.CREATED,
-                                "(publisherId = 'NO-123') AND (quadTree like '%,12004%') AND (messageType = 'DENM') AND (causeCode = 6) AND (protocolVersion = 'DENM:1.2.2') AND (originatingCountry = 'NO')",
-                                ""
-                        )),
-                        ""
-                );
+				Set.of(new NeighbourCapability(
+						new DenmApplication("NO-123",
+								"pub-123",
+								"NO",
+								"DENM:1.2.2",
+								List.of("12004"),
+								List.of(5, 6)),
+						new Metadata(RedirectStatus.OPTIONAL)
+				)),
+				Collections.singleton(new LocalSubscription(
+						52,
+						LocalSubscriptionStatus.CREATED,
+						"(publisherId = 'NO-123') AND (quadTree like '%,12004%') AND (messageType = 'DENM') AND (causeCode = 6) AND (protocolVersion = 'DENM:1.2.2') AND (originatingCountry = 'NO')",
+						""
+				)),
+				""
+		);
 		assertThat(commonInterest).hasSize(1);
 	}
 
@@ -234,7 +234,7 @@ class CapabilityMatcherTest {
 		capability.setMetadata(meta);
 
 		String consumerCommonName = "";
-		LocalSubscription localSubscription = new LocalSubscription("originatingCountry = 'NO' and messageType = 'IVIM' and protocolVersion = 'IVI:1.0' and quadTree like '%,12004%' and iviType like '%,6,%'",consumerCommonName, "IVIM sub");
+		LocalSubscription localSubscription = new LocalSubscription("originatingCountry = 'NO' and messageType = 'IVIM' and protocolVersion = 'IVI:1.0' and quadTree like '%,12004%' and iviType like '%,6,%'", consumerCommonName, "IVIM sub");
 		CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(Sets.newHashSet(Collections.singleton(capability)), Sets.newHashSet(Collections.singleton(localSubscription)), consumerCommonName);
 	}
 
@@ -252,7 +252,7 @@ class CapabilityMatcherTest {
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
 		capability.setMetadata(meta);
 		String consumerCommonName = "";
-		LocalSubscription localSubscription = new LocalSubscription("originatingCountry = 'NO' and messageType = 'SPATEM' and protocolVersion = 'SPATEM:1.0' and quadTree like '%,12003%' and id = 2 or id = 3",consumerCommonName, "SPATEM SUB");
+		LocalSubscription localSubscription = new LocalSubscription("originatingCountry = 'NO' and messageType = 'SPATEM' and protocolVersion = 'SPATEM:1.0' and quadTree like '%,12003%' and id = 2 or id = 3", consumerCommonName, "SPATEM SUB");
 		System.out.println(localSubscription.getSelector());
 		Set<LocalSubscription> localSubscriptions = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(Sets.newHashSet(Collections.singleton(capability)), Collections.singleton(localSubscription), consumerCommonName);
 		assertThat(localSubscriptions).isNotEmpty();
@@ -267,12 +267,12 @@ class CapabilityMatcherTest {
 		camCapability.setMetadata(meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(camCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'CAM' and originatingCountry = 'NO' and protocolVersion = '1.0' and quadTree like '%,0121%' and stationType = 'cyclist'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'CAM' and originatingCountry = 'NO' and protocolVersion = '1.0' and quadTree like '%,0121%' and stationType = 'cyclist'", "")), "");
 		assertThat(commonInterest).isNotEmpty();
 	}
 
 	@Test
-	void mathcCapabilityWithSelectorOfOnlyOptionalField() {
+	void matchCapabilityWithSelectorOfOnlyOptionalField() {
 		SpatemApplication application = new SpatemApplication(
 				"NO-12345",
 				"pub-1",
@@ -285,7 +285,7 @@ class CapabilityMatcherTest {
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
 		capability.setMetadata(meta);
 		String consumerCommonName = "";
-		LocalSubscription localSubscription = new LocalSubscription("name = 'fish'",consumerCommonName, "fish sub");
+		LocalSubscription localSubscription = new LocalSubscription("name = 'fish'", consumerCommonName, "fish sub");
 		System.out.println(localSubscription.getSelector());
 		Set<LocalSubscription> localSubscriptions = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(Sets.newHashSet(Collections.singleton(capability)), Collections.singleton(localSubscription), consumerCommonName);
 		assertThat(localSubscriptions).isNotEmpty();
@@ -301,7 +301,33 @@ class CapabilityMatcherTest {
 
 		String selector = "originatingCountry = 'NO' AND causeCode = 6 OR causeCode = 5";
 
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(), selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(denm_a_b_causeCode_1_2, selector, meta.getShardCount())).isTrue();
+	}
+
+	@Test
+	void matchShardedSelectorToShardedCapability() {
+		DenmApplication denm_a_b_causeCode_1_2 = new DenmApplication("publ-id-1", "pub-123", "NO", "DENM:1.2.2", QUAD_TREE_0121_0122, Collections.singletonList(6));
+		Capability capability = new Capability();
+		capability.setApplication(denm_a_b_causeCode_1_2);
+		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
+		capability.setMetadata(meta);
+
+		String selector = "originatingCountry = 'NO' AND causeCode = 6 OR causeCode = 5 AND shardId = 2";
+
+		assertThat(CapabilityMatcher.matchApplicationToSelector(denm_a_b_causeCode_1_2, selector, meta.getShardCount())).isFalse();
+	}
+
+	@Test
+	void shardedSubscriptionDoesNotMatchShardedCapability() {
+		DenmApplication denm_a_b_causeCode_1_2 = new DenmApplication("publ-id-1", "pub-123", "NO", "DENM:1.2.2", QUAD_TREE_0121_0122, Collections.singletonList(6));
+		Capability capability = new Capability();
+		capability.setApplication(denm_a_b_causeCode_1_2);
+		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
+		capability.setMetadata(meta);
+
+		String selector = "originatingCountry = 'NO' AND shardId = 2 AND (causeCode = 6 OR causeCode = 5)";
+
+		assertThat(CapabilityMatcher.matchApplicationToSelector(denm_a_b_causeCode_1_2, selector, meta.getShardCount())).isFalse();
 	}
 
 	@Test
@@ -315,114 +341,171 @@ class CapabilityMatcherTest {
 
 		String selector = "originatingCountry = 'NO' AND causeCode = 5";
 
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(), selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(denm_a_b_causeCode_1_2, selector, meta.getShardCount())).isTrue();
 	}
 
 	@Test
 	public void findSubTile() {
 		String selector = "quadTree LIKE '%,12002010%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void findTinySubTile() {
 		String selector = "quadTree LIKE '%,120020100000000000%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void finSuperTile() {
 		String selector = "quadTree LIKE '%,12%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void FindTilesOutsideSubTile() {
 		String selector = "quadTree NOT LIKE '%,12002010%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void findTilesOutsideSuperTile() {
 		String selector = "quadTree NOT LIKE '%,12%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void findTilesOutsideSuperTileAlternateNegation() {
 		String selector = "NOT (quadTree LIKE '%,12%')";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void findTilesOutsideSuperTileAlternateNegationWithoutParentheses() {
 		String selector = "NOT quadTree LIKE '%,12%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void findTilesOutsideSuperTileNoMatch() {
 		String selector = "quadTree NOT LIKE '%,1%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector)).isFalse();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isFalse();
 	}
 
 	@Test
 	public void unknownAndSuperTile() {
 		String selector = "fish = 'shark' AND quadTree NOT LIKE '%,1%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector)).isFalse();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isFalse();
 	}
 
 	@Test
 	public void unknownOrSuperTile() {
 		String selector = "fish = 'shark' OR quadTree NOT LIKE '%,1%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
-	//This test needs to be altered when the matcher is working correctly, this is demonstrating a bug. Both should evaluate to false.
-	public void quadTreeTileWithNumberFourIsNotAllowed() {
+	public void missingPublisherName() {
 		Capability capability = new Capability(
-			new DenmApplication(
-					"NO00000",
-					"NO00000-quad-tree-testing",
-					"NO",
-					"DENM:2.3.2",
-					List.of("12004"),
-					List.of(6)
-			),
-			new Metadata(RedirectStatus.OPTIONAL)
-		);
-
-		String selector1 = "originatingCountry = 'NO' and messageType = 'DENM' and quadTree like '%,12004%' and causeCode = 6";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(), selector1)).isTrue();
-
-		String selector2 = "originatingCountry = 'NO' and messageType = 'DENM' and quadTree like '%,1200401%' and causeCode = 6";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(), selector2)).isFalse();
-	}
-
-	@Test
-	public void missingPublisherName(){
-		Capability capability = new Capability(
-				new DatexApplication("pub-1111", "NO-pub-1111","NO", "DATEX2:2.3", List.of("1"), "pub", null),
-				new Metadata()
+				new DatexApplication("pub-1111", "NO-pub-1111", "NO", "DATEX2:2.3", List.of("1"), "pub", null),
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
 		String selector1 = "originatingCountry = 'NO' and messageType = 'DATEX2'";
 		String selector2 = "originatingCountry='NO' and messageType = 'DATEX2' and publisherName = 'pub'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(), selector1)).isTrue();
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(), selector2)).isFalse();
+
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector1, capability.getMetadata().getShardCount())).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector2, capability.getMetadata().getShardCount())).isFalse();
 	}
 
 	@Test
-	public void publisherNameInCapability(){
+	public void publisherNameInCapability() {
 		Capability capability = new Capability(
-				new DatexApplication("pub-1111", "NO-pub-1111","NO", "DATEX2:2.3", List.of("1"), "pub", "NO-PUB"),
-				new Metadata()
+				new DatexApplication("pub-1111", "NO-pub-1111", "NO", "DATEX2:2.3", List.of("1"), "pub", "NO-PUB"),
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
 		String selector1 = "originatingCountry= 'NO' and messageType = 'DATEX2' and publisherName = 'NO-PUB'";
 		String selector2 = "originatingCountry = 'NO' and messageType = 'DATEX2' and publisherId = 'pub-1111'";
 
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(), selector1)).isTrue();
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(), selector2)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector1, capability.getMetadata().getShardCount())).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector2, capability.getMetadata().getShardCount())).isTrue();
+	}
+
+	@Test
+	public void matchShardedSubscriptionToCapability() {
+		Capability capability = new Capability(
+				new DenmApplication(
+						"NO00000",
+						"NO00000-quad-tree-testing",
+						"NO",
+						"DENM:2.3.2",
+						Collections.singletonList("12003"),
+						Collections.singletonList(6)
+				),
+				new Metadata(RedirectStatus.OPTIONAL)
+		);
+
+		String selector = "originatingCountry = 'NO' and messageType = 'DENM' and quadTree like '%,12003%' and causeCode = 6 and shardId = 2";
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isFalse();
+	}
+
+	@Test
+	public void matchUnshardedSubscriptionToShardedCapability() {
+		Metadata metadata = new Metadata(RedirectStatus.OPTIONAL);
+		metadata.setShardCount(3);
+		Capability capability = new Capability(
+				new DenmApplication(
+						"NO00000",
+						"NO00000-quad-tree-testing",
+						"NO",
+						"DENM:2.3.2",
+						Collections.singletonList("12003"),
+						Collections.singletonList(6)
+				),
+				metadata
+		);
+
+		String selector = "originatingCountry = 'NO' and messageType = 'DENM' and quadTree like '%,12003%' and causeCode = 6";
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isTrue();
+	}
+
+	@Test
+	public void matchShardedSubscriptionToShardedCapabilityAndShardIdIsHigherOnSubscription() {
+		Metadata metadata = new Metadata(RedirectStatus.OPTIONAL);
+		metadata.setShardCount(3);
+		Capability capability = new Capability(
+				new DenmApplication(
+						"NO00000",
+						"NO00000-quad-tree-testing",
+						"NO",
+						"DENM:2.3.2",
+						Collections.singletonList("12003"),
+						Collections.singletonList(6)
+				),
+				metadata
+		);
+
+		String selector = "originatingCountry = 'NO' and messageType = 'DENM' and quadTree like '%,12003%' and causeCode = 6 and shardId = 4";
+		assertThat(CapabilityMatcher.matchCapabilitiesToSelector(Collections.singleton(capability), selector)).hasSize(0);
+	}
+
+	@Test
+	public void capabilityIsNotAddedMultipleTimesWhenMatchingMultipleShardsInSelector() {
+		Metadata metadata = new Metadata(RedirectStatus.OPTIONAL);
+		metadata.setShardCount(3);
+		Capability capability = new Capability(
+				new DenmApplication(
+						"NO00000",
+						"NO00000-quad-tree-testing",
+						"NO",
+						"DENM:2.3.2",
+						Collections.singletonList("12003"),
+						Collections.singletonList(6)
+				),
+				metadata
+		);
+
+		String selector = "originatingCountry = 'NO' and messageType = 'DENM' and quadTree like '%,12003%' and causeCode = 6 and (shardId = 2 OR shardId = 3)";
+		assertThat(CapabilityMatcher.matchCapabilitiesToSelector(Collections.singleton(capability), selector)).hasSize(1);
 	}
 
 	@Test
@@ -436,10 +519,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of(6)
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "messageType = 'DENM' and quadTree like '%,12%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(),selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
@@ -453,10 +537,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "messageType = 'DENM' and quadTree like '%,12300%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(),selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
@@ -470,10 +555,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "quadTree like '%,123%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(),selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
@@ -487,10 +573,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "quadTree not like '%,123%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(),selector)).isFalse();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isFalse();
 	}
 
 
@@ -505,10 +592,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "messageType = 'DENM' and quadTree not like '%,122%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(),selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
@@ -522,10 +610,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "messageType = 'DENM' and not (quadTree like '%,123%')";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(),selector)).isFalse();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isFalse();
 	}
 
 	@Test
@@ -539,10 +628,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "messageType = 'DENM' and not (quadTree like '%,124%')";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(),selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
@@ -556,10 +646,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "messageType = 'DENM' and quadTree not like '%,123%'";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability.getApplication(),selector)).isFalse();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isFalse();
 	}
 
 	@Test
@@ -574,31 +665,10 @@ class CapabilityMatcherTest {
 						List.of("122"),
 						List.of()
 				),
-				new Metadata()
-		);
-        assertThat(
-				CapabilityMatcher.matchCapabilityApplicationToSelector(
-						capability2.getApplication(),
-						"messageType = 'DENM' and not (quadTree like '%,123%,') and not (quadTree like '%,122%,')"
-				)).isFalse();
-	}
-
-	@Test
-	public void mathcAgainstSubTile() {
-		Capability capability1 = new Capability(
-				new DenmApplication(
-						"NO-123",
-						"NO-123:123",
-						"NO",
-						"1.0",
-						List.of("123"),
-						List.of()
-				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
 
-		String selector = "messageType = 'DENM' and not (quadTree like '%,1233%')";
-		assertThat(CapabilityMatcher.matchCapabilityApplicationToSelector(capability1.getApplication(),selector)).isTrue();
+		String selector = "messageType = 'DENM' and not (quadTree like '%,123%,') and not (quadTree like '%,122%,')";
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability2.getApplication(), selector, capability2.getMetadata().getShardCount())).isFalse();
 	}
-
 }
